resolve new page issues on firefox

--- a/src/stylesheets/components/_card.scss
+++ b/src/stylesheets/components/_card.scss
@@ -43,10 +43,7 @@
     text-align: center;
     padding: 7px;
     width: 100px;
-    a {
-      color: white;
-      text-decoration: none;
-    }
+    cursor: pointer;
   }
   .upper {
     font: {
